--- a/MyBink/app/src/main/res/values/strings.xml
+++ b/MyBink/app/src/main/res/values/strings.xml
@@ -7,4 +7,5 @@
     <string name="action_settings">Settings</string>
 
     <string name="scan_barcode">Scan barcode</string>
+    <string name="show_countries">Show Countries</string>
 </resources>
